java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ImportClassTest/testImportHint2.pass
/*
 * ImportTest.java
 *
 * Created on March 12, 2005, 10:01 AM
 */

package org.netbeans.test.java.hints;

import java.awt.Component;
import java.lang.reflect.Method;
import java.util.List;
import javax.swing.JComponent;
import javax.swing.UIManager;

/**
 *
 * @author lahvac
 */
public class ImportTest2 implements List {
    
    /** Creates a new instance of ImportTest */
    public ImportTest2() {
    }
    
}
